data/collection/fixes/descriptions/kotlin/KT-13934
```
class A {
    companion object {
        fun foo() = A()
    }
}

fun test() {
    println(A::foo)
}
```

```
1.kt:8:16: error: unresolved reference: foo
    println(A::foo)
               ^
```
